structure 2024 into src